2008-10-09  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
        (run_sync_state_machine):
	Add some debug spew and avoid crashing in case of code not properly
	setting the GError, as reported on the list.

2008-10-06  Alexander Larsson  <alexl@redhat.com>

	Patch from Andreas Henriksson

        * daemon/gvfsbackendftp.c:
        (dir_default_iter_new):
        (dir_default_iter_process):
	Don't read past start of filename. (#545971)

2008-10-03  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (get_name_and_icon): Use
	the Alias instead of the Name, so we automatically fallback
	if the name isn't available

2008-10-03  David Zeuthen  <davidz@redhat.com>

	* daemon/gvfsbackendgphoto2.c: Remove misleading comment about the
	license (#554811)

2008-10-02  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c: Re-add bluetooth.h include,
	we still use bachk right now

2008-10-02  Bastien Nocera  <hadess@hadess.net>

	* client/test-uri-utils.c: Add a few more test URIs

2008-09-29  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolume.c (mount_cb): Complete the mounting
	operation in idle to ensure we've processed pending dbus messages
	for creating the new mount object

2008-09-29  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c:
	* monitor/hal/ghalvolumemonitor.[ch]:
	Make sure we emit 'mount-added' when forcing an update for
	completing a mount operation (#552168)

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (_is_nokia_3650),
	(get_name_and_icon), (_get_device_properties),
	(g_vfs_backend_obexftp_finalize), (g_vfs_backend_obexftp_init),
	(_query_file_info_helper), (session_connect_error_cb),
	(session_connected_cb), (do_mount),
	(g_vfs_backend_obexftp_class_init):
	* daemon/obexftp-marshal.list:
	Port to BlueZ 4.x API and obex-data-server SVN API,
	use the "Icon" property to get the icon, instead of parsing the